# iroh-music-server

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/client/: Cargo.toml
crates/client/src/: error.rs  lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  error.rs  index.rs  iroh_rpc.rs  lastfm.rs  lib.rs  main.rs  scanner.rs  server.rs  stream.rs
crates/subsonic/: Cargo.toml
crates/subsonic/src/: auth.rs  backend.rs  config.rs  lib.rs  main.rs  models.rs  response.rs  routes.rs
