[workspace]
members = ["crates/client", "crates/protocol", "crates/server", "crates/subsonic"]
resolver = "3"

[workspace.dependencies]
axum = "0.8"
iroh = "1.0.0-rc.0"
iroh-tickets = "1.0.0-rc.0"
lofty = "0.24"
md5 = "0.8"
notify = "8"
rayon = "1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
