[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
iroh.workspace = true
lofty.workspace = true
notify.workspace = true
protocol = { path = "../protocol" }
rayon.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"
