[package]
name = "subsonic"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
iroh.workspace = true
md5.workspace = true
protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
server = { path = "../server" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "subsonic"
path = "src/main.rs"
